--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -5,6 +5,7 @@
   padding-bottom: 36px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
   justify-content: center;
+  width: 100%;
 }
 .cards__list {
   padding: 0;
